Fixed various packaging bugs

--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,9 @@
 AC_INIT(gnome-virt-manager.spec.in)
-AM_INIT_AUTOMAKE(gnome-virt-manager, 0.0.2)
+AM_INIT_AUTOMAKE(gnome-virt-manager, 0.1.0)
 
 AC_OUTPUT(Makefile
           src/Makefile
           src/virtManager/Makefile
+          src/vncViewer/Makefile
           pixmaps/Makefile
           gnome-virt-manager.spec)
