--- a/pixmaps/Makefile.am
+++ b/pixmaps/Makefile.am
@@ -1,5 +1,5 @@
 
 pixmapdir = $(pkgdatadir)/pixmaps
-pixmap_DATA = $(wildcard $(srcdir)/*.png)
+pixmap_DATA = $(wildcard $(srcdir)/*.png) $(wildcard $(srcdir)/*.svg)
 
 EXTRA_DIST = $(pixmap_DATA)
