--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -9,7 +9,7 @@ Summary: Virtual Machine Manager
 
 Group: Applications/Emulators
 License: GPL v2+
-URL: http://harp.boston.redhat.com/virtdev/applications/gnome-virt-manager
+URL: http://people.redhat.com/berrange/virt-manager/
 Source0: %{name}-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
@@ -62,6 +62,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Wed Jun 28 2006 Daniel Berrange <berrange@redhat.com> - 0.1.2-1
+- Change URL to public location
+
 * Fri Jun 16 2006 Daniel Berrange <berrange@redhat.com> - 0.1.0-1
 - Added initial support for using VNC console
 
