Remove matplotlib and use a custom written GTK graph widget. Temporarily using GDK drawing instead of Cairo

--- a/src/graphWidgets/Makefile.am
+++ b/src/graphWidgets/Makefile.am
@@ -5,21 +5,24 @@ sparkline_LTLIBRARIES = sparkline.la
 CODEGENDIR := $(shell pkg-config --variable=codegendir pygtk-2.0)
 DEFSDIR :=  $(shell pkg-config --variable=defsdir pygtk-2.0)
 
-py%.defs: %.h
-	python $(CODEGENDIR)/h2def.py $< > $@
+pysparklinemodule.defs: sparkline.h cellrenderersparkline.h
+	python $(CODEGENDIR)/h2def.py $^ > $@
 
-py%.c: py%.defs py%.override
-	pygtk-codegen-2.0 --prefix sparkline \
+pysparklinemodule.c: pysparklinemodule.defs pysparklinemodule.override
+	pygtk-codegen-2.0 \
+        --prefix sparkline \
 	--register $(DEFSDIR)/gdk-types.defs \
 	--register $(DEFSDIR)/gtk-types.defs \
-	--override $(srcdir)/pycellrenderersparkline.override \
-	pycellrenderersparkline.defs > $@
+	--override $(srcdir)/pysparklinemodule.override \
+	pysparklinemodule.defs > $@
 
 sparkline_la_SOURCES = \
     sparklinemodule.c \
-    pycellrenderersparkline.c \
+    pysparklinemodule.c \
     cellrenderersparkline.c \
-    cellrenderersparkline.h
+    cellrenderersparkline.h \
+    sparkline.c \
+    sparkline.h
 
 sparkline_la_CFLAGS = -fPIC -Wall \
     $(PYGTK2_CFLAGS) \
