Ensure python scripts are installed as SCRIPTS, rather than DATA to stop rpmlint complaining

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,7 @@ bin_SCRIPTS = virt-manager
 
 pythondir = $(pkgdatadir)
 python_SOURCES = $(PACKAGE).py.in
-python_DATA = $(PACKAGE).py
+python_SCRIPTS = $(PACKAGE).py
 
 libexec_SOURCES = $(PACKAGE)-launch.in
 libexec_SCRIPTS = $(PACKAGE)-launch
