--- a/src/vncViewer/Makefile.am
+++ b/src/vncViewer/Makefile.am
@@ -1,5 +1,5 @@
 
 pythondir = $(pkgdatadir)/vncViewer
-python_DATA = $(wildcard $(srcdir)/*.py)
+python_SCRIPTS = $(wildcard $(srcdir)/*.py)
 
 EXTRA_DIST = $(python_DATA)
