--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -8,8 +8,8 @@ Release: 1%{_extra_release}
 Summary: Virtual Machine Manager
 
 Group: Applications/Emulators
-License: GPL v2+
-URL: http://people.redhat.com/berrange/virt-manager/
+License: GPL
+URL: http://virt-manager.et.redhat.com/
 Source0: %{name}-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
@@ -19,12 +19,9 @@ Requires: gnome-python2-gconf >= 1.99.11-7
 Requires: libvirt-python >= 0.1.1
 Requires: dbus-python >= 0.61
 
-# src/vncViewer/image.py needs either this
+# src/vncViewer/image.py needs this but we'd like to kill it off
+# soon because it pulls in TCL/TK :-(
 Requires: python-imaging
-# Or this
-# pygame pulls in crazy dependancies such as Tcl, so we use python-imaging for now
-#Requires: pygame
-# But not both!
 
 BuildRequires: pygtk2-devel
 BuildRequires: gtk2-devel
@@ -54,6 +51,7 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,root,root,-)
+%doc README COPYING AUTHORS ChangeLog NEWS
 %{_bindir}/%{name}
 %{_libexecdir}/%{name}-launch
 %{_libdir}/%{name}/*
@@ -62,6 +60,10 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Mon Jul 17 2006 Daniel Berrange <berrange@redhat.com> - 0.1.3-1
+- Fix License tag
+- Updated for new release
+
 * Wed Jun 28 2006 Daniel Berrange <berrange@redhat.com> - 0.1.2-3
 - Added missing copyright headers on all .py files
 
