--- a/src/vncViewer/Makefile.am
+++ b/src/vncViewer/Makefile.am
@@ -2,4 +2,4 @@
 pythondir = $(pkgdatadir)/vncViewer
 python_SCRIPTS = $(wildcard $(srcdir)/*.py)
 
-EXTRA_DIST = $(python_DATA)
+EXTRA_DIST = $(python_SCRIPTS)
