--- a/src/virtManager/Makefile.am
+++ b/src/virtManager/Makefile.am
@@ -2,4 +2,4 @@
 pythondir = $(pkgdatadir)/virtManager
 python_SCRIPTS = $(wildcard $(srcdir)/*.py)
 
-EXTRA_DIST = $(python_DATA)
+EXTRA_DIST = $(python_SCRIPTS)
