Change _SCRIPTS back to _DATA, and instead remove the #!/usr/bin/python stuff which is what rpmlint was really complaining about

--- a/src/vncViewer/Makefile.am
+++ b/src/vncViewer/Makefile.am
@@ -1,5 +1,5 @@
 
 pythondir = $(pkgdatadir)/vncViewer
-python_SCRIPTS = $(wildcard $(srcdir)/*.py)
+python_DATA = $(wildcard $(srcdir)/*.py)
 
-EXTRA_DIST = $(python_SCRIPTS)
+EXTRA_DIST = $(python_DATA)
