--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -69,6 +69,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Thu Jul 20 2006 Daniel Berrange <berrange@redhat.com> - 0.1.5-1
+- Update to new 0.1.5 release snapshot
+
 * Thu Jul 20 2006 Daniel Berrange <berrange@redhat.com> - 0.1.4-1
 - Update to new 0.1.4 release snapshot
 
