Added support for connecting to & displaying the serial console for guest VMs using the 'vte' module

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -29,6 +29,11 @@ Requires: dbus-python >= 0.61
 Requires: gnome-keyring >= 0.4.9
 # Minimum we've tested with
 Requires: python-ctypes >= 0.9.9.6
+# Minimum we've tested with
+Requires: libxml2-python >= 2.6.23
+
+# Earlier vte hand broken python binding module
+Requires: vte >= 0.12.2
 
 BuildRequires: pygtk2-devel
 BuildRequires: gtk2-devel
