--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -37,6 +37,7 @@ gtk.gdk.threads_init()
 
 import dbus
 import dbus.glib
+dbus.glib.threads_init()
 import dbus.service
 
 from optparse import OptionParser
