--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -31,6 +31,8 @@ Requires: gnome-keyring >= 0.4.9
 Requires: gnome-python2-gnomekeyring >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
+# Required to install Xen guests
+Requires: python-xeninst >= 0.90.0
 
 # Earlier vte hand broken python binding module
 Requires: vte >= 0.12.2
