--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -8,7 +8,7 @@
 
 Name: @PACKAGE@
 Version: @VERSION@
-Release: 2%{_extra_release}
+Release: 1%{_extra_release}
 Summary: Virtual Machine Manager
 
 Group: Applications/Emulators
@@ -21,20 +21,23 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Requires: pygtk2 >= 1.99.12-6
 Requires: gnome-python2-gconf >= 1.99.11-7
 # Absolutely require this version or newer
-Requires: libvirt-python >= 0.1.4
+Requires: libvirt-python >= 0.1.4-3
 # Definitely does not work with earlier due to python API changes
 Requires: dbus-python >= 0.61
 # Might work with earlier, but this is what we've tested
 # We use 'ctypes' so don't need the 'gnome-keyring-python' bits
 Requires: gnome-keyring >= 0.4.9
 # Minimum we've tested with
+# Although if you don't have this, comment it out and the app
+# will work just fine - keyring functionality will simply be
+# disabled 
 Requires: gnome-python2-gnomekeyring >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
 # Required to install Xen guests
-Requires: python-xeninst >= 0.90.0
+Requires: python-xeninst >= 0.90.1
 
-# Earlier vte hand broken python binding module
+# Earlier vte han broken python binding module
 Requires: vte >= 0.12.2
 
 BuildRequires: pygtk2-devel
@@ -92,6 +95,11 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Tue Aug 22 2006 Daniel Berrange <berrange@redhat.com> - 0.2.0-1
+- Added wizard for creating virtual machines
+- Added embedded serial console
+- Added ability to take screenshots
+
 * Mon Jul 24 2006 Daniel Berrange <berrange@redhat.com> - 0.1.5-2
 - Prefix *.pyo files with 'ghost' macro
 - Use fully qualified URL in Source  tag
