--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -8,7 +8,7 @@
 
 Name: @PACKAGE@
 Version: @VERSION@
-Release: 3%{_extra_release}
+Release: 1%{_extra_release}
 Summary: Virtual Machine Manager
 
 Group: Applications/Emulators
@@ -47,6 +47,10 @@ BuildRequires: gtk2-devel
 BuildRequires: python-devel
 BuildRequires: gettext
 
+Requires(pre): GConf2
+Requires(post): GConf2
+Requires(preun): GConf2
+
 %description
 Virtual Machine Manager provides a graphical tool for administering
 virtual machines such as Xen. It uses libvirt as the backend management
@@ -70,16 +74,29 @@ rm -f $RPM_BUILD_ROOT%{_libdir}/%{name}/sparkline.la
 %clean
 rm -rf $RPM_BUILD_ROOT
 
+%pre
+if [ "$1" -gt 1 ]; then
+    export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
+    gconftool-2 --makefile-uninstall-rule \
+      %{_sysconfdir}/gconf/schemas/%{name}.schemas > /dev/null || :
+fi
+
 %post
 export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
-SCHEMAS="%{name}.schemas"
-for S in $SCHEMAS; do
-  gconftool-2 --makefile-install-rule /etc/gconf/schemas/$S > /dev/null
-done
+gconftool-2 --makefile-install-rule \
+  %{_sysconfdir}/gconf/schemas/%{name}.schemas > /dev/null || :
+
 update-desktop-database %{_datadir}/applications
 
 %postun
 update-desktop-database %{_datadir}/applications
+
+%preun
+if [ "$1" -eq 0 ]; then
+    export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source`
+    gconftool-2 --makefile-uninstall-rule \
+      %{_sysconfdir}/gconf/schemas/%{name}.schemas > /dev/null || :
+fi
 
 %files -f %{name}.lang
 %defattr(-,root,root,-)
@@ -110,6 +127,11 @@ update-desktop-database %{_datadir}/applications
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Mon Sep  4 2006 Daniel Berrange <berrange@redhat.com> - 0.2.1-1
+- Updated to 0.2.1 tar.gz
+- Added rules to install/uninstall gconf schemas in preun,post,pre
+  scriptlets
+
 * Thu Aug 24 2006 Jeremy Katz <katzj@redhat.com> - 0.2.0-3
 - BR gettext
 
