--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -31,6 +31,20 @@ gettext_dir = "::GETTEXTDIR::"
 locale.setlocale(locale.LC_ALL, '')
 gettext.install(gettext_app, gettext_dir)
 
+# Urgh, pygtk merely logs a warning when failing to open
+# the X11 display connection, and lets everything carry
+# on as if all were fine. Ultimately bad stuff happens,
+# so lets catch it here & get the hell out...
+import warnings
+warnings.filterwarnings('error', module='gtk')
+try:
+    import gtk
+except Warning, e:
+    # ...the risk is we catch too much though
+    # Damned if we do, damned if we dont :-)(
+    print _("Unable to initialize GTK: ") + str(e)
+    sys.exit(1)
+warnings.resetwarnings()
 
 import gtk
 gtk.gdk.threads_init()
