Replace numerous 'print' statements with calls to python logging. Added syntax checking of all modules

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = virtManager vncViewer graphWidgets
+SUBDIRS = vncViewer graphWidgets virtManager
 
 bin_SOURCES = virt-manager.in
 bin_SCRIPTS = virt-manager
