--- a/src/virtManager/Makefile.am
+++ b/src/virtManager/Makefile.am
@@ -3,3 +3,14 @@ pythondir = $(pkgdatadir)/virtManager
 python_DATA = $(wildcard $(srcdir)/*.py)
 
 EXTRA_DIST = $(python_DATA)
+
+SYNTAX_CHECK_TSTAMPS = $(python_DATA:$(srcdir)/%.py=.tstamp.%.py)
+
+
+check-local: $(SYNTAX_CHECK_TSTAMPS)
+
+clean-local:
+	rm -f $(SYNTAX_CHECK_TSTAMPS)
+
+.tstamp.%.py: %.py
+	PYTHONPATH=$(srcdir)/..:../graphWidgets/.libs python $<  && touch $@
