--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -34,7 +34,7 @@ Requires: gnome-python2-gnomekeyring >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
 # Required to install Xen guests
-Requires: python-xeninst >= 0.90.1
+Requires: python-xeninst >= 0.93.0
 # Required for loading the glade UI
 Requires: pygtk2-libglade
 # Required for our graphics which are currently SVG format
@@ -129,6 +129,24 @@ fi
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Tue Sep 26 2006 Daniel Berrange <berrange@redhat.com> - 0.2.3-1
+- Require xeninst >= 0.93.0 to fix block backed devices
+- Skip para/fully-virt step when going back in wizard if not HVM host (bz 207409)
+- Fix handling of modifier keys in VNC console so Alt key doesn't get stuck (bz 207949)
+- Allow sticky modifier keys by pressing same key 3 times in row (enables Ctrl-Alt-F1
+  by doing Ctrl Ctrl Ctrl  Alt-F1)
+- Improved error handling during guest creation
+- Log errors with python logging, instead of to stdout
+- Remove unused buttons from main domain list window
+- Switch out of full screen & release key grab when closing console
+- Trim sparkline CPU history graph to 40 samples max
+- Constraint VCPU adjuster to only allow upto guest's max VCPU count
+- Show guest's max & current VCPU count in details page
+- Fix rounding of disk sizes to avoid a 1.9 GB disk being rounded down to 1 GB
+- Use raw block device path to CDROM not mount point for HVM guest (bz 206965)
+- Fix visibility of file size spin box (bz 206186 part 2)
+- Check for GTK failing to open X11 display (bz 205938)
+
 * Fri Sep 15 2006 Daniel Berrange <berrange@redhat.com> - 0.2.2-1
 - Fix event handling in create VM wizard (bz 206660 & 206186)
 - Fix close button in about dialog (bz 205943)
