Fixup download URL

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -14,7 +14,7 @@ Summary: Virtual Machine Manager
 Group: Applications/Emulators
 License: GPL
 URL: http://virt-manager.et.redhat.com/
-Source0: http://virt-manager.et.redhat.com/%{name}-%{version}.tar.gz
+Source0: http://virt-manager.et.redhat.com/download/sources/%{name}/%{name}-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 # These two are just the oldest version tested
