Remove duplicate menu entry (bz 211230)

--- a/src/virt-manager.desktop.in
+++ b/src/virt-manager.desktop.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Name=Virtual Machine Manager
-Comment=The GNOME virtual machine manager
+Comment=The virtual machine management tool
 Icon=::ICONDIR::/::PACKAGE::-icon.svg
 Exec=::PACKAGE::
 Type=Application
 Terminal=false
 Encoding=UTF-8
-Categories=Development;System;
+Categories=System;
